# Bumblebee-Project

./: .gitignore  pyproject.toml  requirements.txt
src/: __init__.py  aerodynamic_model.py  bumblebee_kinematic_model.py  forces_model.py  initialize_transformations.py  kinematics_evaluations.py  main.py  plot_kinematics.py  workflows.py
src/core/: __init__.py  angle.py  math_utils.py  referentials.py  transform_func.py  transformations.py  types.py  vector.py
src/data/: __init__.py  kinematics_solution_holder.py  wing_contour.py
src/tests/: test_angle.py  test_angle_v2.py  test_math_utils.py  test_math_utils_v2.py  test_referentials.py  test_referentials_v2.py  test_transform_func.py  test_vector3d.py  test_vector3d_v2.py
tests/: test_transform_func.py
